testsuite/tests/v1/patterns/complex/non_callable_selector/test.out
Error: Error from the Lua engine
   ╭─[ <working-dir>/script.lkql:3:27 ]
   │
 3 │ print(root is FooNode(any local_children is FooNode))
   │                           ───────┬──────  
   │                                  ╰──────── Attempt to call local 'local_children' (a number value)
───╯
